--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>Ricky's Restaurant - find your favourite dish</title>
+		<title>Empanada's Restaurant - find your favourite dish</title>
 	</head>
 	<body>
-		<h1>Ricky's Restaurant</h1>
+		<h1>Empanada's Restaurant</h1>
 		<h2>Find your favourite dish</h2>
 		<form action="/searchResults.html" method="GET">
 			Find all dishes containing : <input type="text" name="searchTerm" id="searchTerm" /> <input type="submit" value="search" />
