login auth tomcat BASIC

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -5,8 +5,8 @@
 	<body>
 		<h1>Empanada's Restaurant</h1>
 		<h2>Find your favourite dish</h2>
-		<form action="/searchResults.html" method="GET">
-			Find all dishes containing : <input type="text" name="searchTerm" id="searchTerm" /> <input type="submit" value="search" />
+		<form action="/searchItem.html" method="GET">
+			Find all dishes containing : <input type="text" name="searchTerm"  /> <input type="submit" value="search" />
 		</form>
 	</body>
 </html>
